test/compile_errors/err_keyword_as_var_it.w
//! expect-check-fail: 'it' is a reserved keyword and cannot be used as an identifier [E0953]
let it = 42
fn main:
    let x = 1
